Fixed Bottom of Line Cutoffs

--- a/docs/lyricle.css
+++ b/docs/lyricle.css
@@ -99,7 +99,7 @@ body {
     margin-right: auto;
 }
 .lyricle-lyrics-div {
-    height: 1.3em;
+    height: 1.6em;
     border: 1px solid rgb(255, 255, 255);
     background: transparent;
     border: none;
